Update frontend configuration to use Render backend URL and prepare for Netlify deployment

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 # Production Frontend Environment for Netlify
-# Update this with your actual ngrok URL when deploying
-VITE_API_URL=https://YOUR_NGROK_URL.ngrok.io/api
+# Updated with actual Render backend URL
+VITE_API_URL=https://appliance-buddy.onrender.com/api
 
 # Supabase Configuration
 VITE_SUPABASE_URL=https://qsnmybgvrwokifqndhga.supabase.co
