--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.0",
+    "@types/uuid": "^9.0.7",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
@@ -29,19 +35,13 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "postgres": "^3.4.3",
+    "typescript": "^5.3.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^20.10.0",
-    "@types/uuid": "^9.0.7",
     "drizzle-kit": "^0.20.0",
-    "tsx": "^4.6.0",
-    "typescript": "^5.3.0"
+    "tsx": "^4.6.0"
   },
   "keywords": [
     "express",
