--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,11 @@
-# Railway configuration for Appliance Buddy monorepo
+# Railway configuration for Appliance Buddy
 
 [build]
 builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "sh -c 'cd backend && npm start & npm run preview -- --port 3000'"
+startCommand = "sh -c 'cd backend && npm start & npm run preview -- --host 0.0.0.0 --port 3000'"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
