--- a/nginx.conf
+++ b/nginx.conf
@@ -10,17 +10,16 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
-    include /etc/nginx/conf.d/*.conf;
     
     # Define upstream for backend API
     upstream backend {
-        server localhost:3001;
+        server 127.0.0.1:3001;
     }
 
     server {
         listen 3000;
         server_name localhost;
-        root /usr/share/nginx/html;
+        root /app/dist;
         index index.html;
         
         # Serve static files
