--- a/railway.toml
+++ b/railway.toml
@@ -5,7 +5,8 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "sh -c 'cd backend && npm start & npm run preview -- --host 0.0.0.0 --port 3000'"
+# Use the CMD from Dockerfile instead of overriding it
+# startCommand = "sh -c 'cd backend && npm start & npm run preview -- --host 0.0.0.0 --port 3000'"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
