--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,10 @@ http {
     keepalive_timeout 65;
     types_hash_max_size 2048;
     
+    # Enable logging
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log;
+    
     # Define upstream for backend API
     upstream backend {
         server 127.0.0.1:3001;
@@ -38,6 +42,23 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+            
+            # Handle proxy errors
+            proxy_intercept_errors off;
+            
+            # Timeout settings
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            
+            # Logging
+            access_log /var/log/nginx/api_access.log;
+            error_log /var/log/nginx/api_error.log;
+        }
+        
+        # Health check endpoint
+        location /health {
+            proxy_pass http://backend;
         }
     }
 }
