--- a/nginx.conf
+++ b/nginx.conf
@@ -59,6 +59,13 @@ http {
         # Health check endpoint
         location /health {
             proxy_pass http://backend;
+            proxy_intercept_errors on;
+            error_page 502 503 504 = @health_fallback;
+        }
+        
+        location @health_fallback {
+            add_header Content-Type application/json;
+            return 200 '{"status":"OK","nginx":"running","backend":"unavailable"}';
         }
     }
 }
