--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,10 +8,10 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 
 # Server Configuration
 PORT=3001
-NODE_ENV=development
+NODE_ENV=production
 
-# CORS Configuration
-FRONTEND_URL=http://localhost:3000
+# CORS Configuration - Update with your Railway domain
+FRONTEND_URL=http://localhost:3000,https://your-app-name-production.up.railway.app
 
 # Security
 JWT_SECRET=your-jwt-secret-here-change-in-production
