--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,8 @@ http {
     }
 
     server {
-        listen 3000;
+        # Use $PORT environment variable for Railway, fallback to 3000
+        listen ${PORT:-3000};
         server_name localhost;
         root /app/dist;
         index index.html;
@@ -43,13 +44,26 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             
+            # Add WebSocket support (Necessary for version 0.5.0 and up)
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            
+            # Additional headers for better proxying
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # (Optional) Disable proxy buffering for better streaming response from models
+            proxy_buffering off;
+            
+            # Proxy timeouts
+            proxy_connect_timeout 180s;
+            proxy_send_timeout 180s;
+            proxy_read_timeout 180s;
+            
             # Handle proxy errors
             proxy_intercept_errors off;
-            
-            # Timeout settings
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
             
             # Logging
             access_log /var/log/nginx/api_access.log;
