--- a/nginx.conf
+++ b/nginx.conf
@@ -17,12 +17,11 @@ http {
     
     # Define upstream for backend API
     upstream backend {
-        server 127.0.0.1:3001;
+        server 127.0.0.1:8080;
     }
 
     server {
-        # Use $PORT environment variable for Railway, fallback to 3000
-        listen ${PORT:-3000};
+        listen ${PORT:-3000}; # Use PORT environment variable or default to 3000
         server_name localhost;
         root /app/dist;
         index index.html;
