--- a/nginx.conf
+++ b/nginx.conf
@@ -17,11 +17,11 @@ http {
     
     # Define upstream for backend API
     upstream backend {
-        server 127.0.0.1:8080;
+        server 127.0.0.1:3001; # Backend runs on port 3001
     }
 
     server {
-        listen ${PORT:-3000}; # Use PORT environment variable or default to 3000
+        listen 3000; # Nginx listens on port 3000
         server_name localhost;
         root /app/dist;
         index index.html;
