Add backward compatible Dockerfile for Railway deployment

--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,8 @@
 
 [build]
 builder = "DOCKERFILE"
+# Explicitly tell Railway to use the railway.json configuration
+dockerfilePath = "Dockerfile"
 
 [deploy]
 # Use the CMD from Dockerfile instead of overriding it
