--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,8 @@
 
 FROM node:18-alpine
 
-WORKDIR /app
+# Set working directory to backend
+WORKDIR /app/backend
 
 # Copy package files
 COPY package*.json ./
@@ -16,11 +17,12 @@ COPY . .
 # Install tsx for running TypeScript files directly
 RUN npm install tsx
 
+# Build the application
+RUN npm run build
+
 # Expose port (will be overridden by platform)
 EXPOSE 3001
 
-# Set working directory for proper execution
-WORKDIR /app
-
 # Start the application
-CMD ["npx", "tsx", "src/app.ts"]
+# Use the PORT environment variable with fallback to 3001
+CMD ["sh", "-c", "npx tsx src/app.ts"]
