--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "description": "Express.js backend for Appliance Buddy application",
-  "main": "src/app.ts",
+  "main": "dist/app.js",
   "scripts": {
     "dev": "tsx watch src/app.ts",
     "build": "tsc",
-    "start": "node index.js",
+    "start": "node dist/app.js",
+    "postinstall": "npm run build",
     "start:dev": "tsx src/app.ts",
     "db:generate": "drizzle-kit generate:pg",
     "db:migrate": "drizzle-kit up:pg",
