Fix module resolution issues for Render deployment

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,9 +15,9 @@
     "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./*"]
     },
     "types": ["node"]
   },
