--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,10 +15,7 @@
     "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "baseUrl": "./src",
-    "paths": {
-      "@/*": ["./*"]
-    },
+    "baseUrl": ".",
     "types": ["node"]
   },
   "include": [
