--- a/frontend/nginx.frontend.conf
+++ b/frontend/nginx.frontend.conf
@@ -19,7 +19,7 @@ http {
     # Define upstream for backend API
     # This will be overridden in Railway with the actual backend service URL
     upstream backend {
-        server host.docker.internal:3001;
+        server backend:3001;
     }
     
     server {
