--- a/frontend/railway.toml
+++ b/frontend/railway.toml
@@ -2,12 +2,11 @@
 
 [build]
 builder = "DOCKERFILE"
-# Explicitly tell Railway to use the railway.json configuration
-dockerfilePath = "Dockerfile"
+# Explicitly tell Railway to use the frontend Dockerfile
+dockerfilePath = "frontend.Dockerfile"
 
 [deploy]
 # Use the CMD from Dockerfile instead of overriding it
-# startCommand = "sh -c 'cd backend && npm start & npm run preview -- --host 0.0.0.0 --port 3000'"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
