--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,11 @@
-# This Dockerfile is for backward compatibility with platforms that expect a root Dockerfile
-# For the recommended two-container approach, please use railway.json
+# Frontend Dockerfile for Appliance Buddy
 
-# Build the frontend service by default
-FROM node:18-alpine AS frontend-builder
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
-COPY frontend.Dockerfile ./
 
 # Install dependencies with legacy peer deps to avoid conflicts
 RUN npm install --legacy-peer-deps
@@ -23,7 +20,7 @@ RUN npm run build
 FROM nginx:alpine
 
 # Copy built frontend files
-COPY --from=frontend-builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Copy nginx configuration
 COPY nginx.frontend.conf /etc/nginx/nginx.conf
