--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,9 +15,9 @@
     "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["src/*"]
     },
     "types": ["node"]
   },
