--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "tsx watch src/app.ts",
     "build": "tsc",
-    "start": "node index.js",
+    "start": "node -r tsconfig-paths/register index.js",
     "postinstall": "npm run build",
     "start:dev": "tsx src/app.ts",
     "db:generate": "drizzle-kit generate:pg",
@@ -38,9 +38,10 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "postgres": "^3.4.3",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.6.0",
     "typescript": "^5.3.0",
     "uuid": "^9.0.1",
-    "tsx": "^4.6.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
